Add statistics table

--- a/web/main.html
+++ b/web/main.html
@@ -62,7 +62,7 @@
     <nav class="navbar container is-max-widescreen" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <img src="./img/logo_header.png" width="154" height="48">
+                <img src="./img/logo_header.png" width="154" height="48" alt="Tight Shorts logo">
             </a>
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar">
                 <span aria-hidden="true"></span>
@@ -197,7 +197,7 @@
                     <!-- Form: ends -->
                 </div>
                 <div class="column is-half is-full-mobile">
-
+                    <table class="table is-narrow is-borderless" id="table-statistic"></table>
                 </div>
             </div>
             <div class="columns">
@@ -226,7 +226,7 @@
                 <div class="column is-half is-full-mobile">
                     <!-- Table -->
                     <div class="table-container">
-                        <table class="table is-hoverable is-fullwidth">
+                        <table class="table table-data is-hoverable is-fullwidth">
                             <thead>
                                 <tr>
                                     <th>Date</th>
@@ -312,7 +312,6 @@
     <!-- Cookie message: ends -->
     <!-- Cookie script -->
     <script src="./js/cookie.js"></script>
-
     <script src="./js/navbar.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/chart.mjs" type="module"></script>
