Form full width

--- a/web/main.html
+++ b/web/main.html
@@ -187,7 +187,7 @@
                     <p class="subtitle"> Daily short sale volume </p>
                     <!-- Form -->
                     <form class="field has-addons" id="search">
-                        <div class="control">
+                        <div class="control main-input">
                             <input class="input" id="input_ticker" type="text" placeholder="Ticker">
                         </div>
                         <div class="control">
