--- a/web/main.html
+++ b/web/main.html
@@ -80,7 +80,7 @@
                     Home
                 </a>
                 <a class="navbar-item" href="https://short-fork.herokuapp.com/">
-                    Short Fork
+                    <ion-icon name="open-outline"></ion-icon>Short Fork
                 </a>
                 <a class="navbar-item modal-button is-hidden-desktop" data-target="help-modal">
                     What is it all about?
@@ -93,19 +93,19 @@
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="https://t.me/samgozman" target="_blank" rel="nofollow"
                             rel="noreferrer">
-                            📨 Telegram
+                            <ion-icon name="send-outline"></ion-icon> Telegram
                         </a>
                         <a class="navbar-item" href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/"
                             target="_blank" rel="nofollow" rel="noreferrer">
-                            🪶 Tinkoff Pulse
+                            <ion-icon name="pulse-outline"></ion-icon> Tinkoff Pulse
                         </a>
                         <a class="navbar-item" href="#support">
-                            💰 Support Project
+                            <ion-icon name="cash-outline"></ion-icon> Support Project
                         </a>
                         <hr class="navbar-divider">
                         <a class="navbar-item" href="https://github.com/samgozman/tightshorts/issues" target="_blank"
                             rel="nofollow" rel="noreferrer">
-                            ☢️ Report an issue
+                            <ion-icon name="bug-outline"></ion-icon> Report an issue
                         </a>
                     </div>
                 </div>
@@ -174,7 +174,9 @@
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
-                <p class="modal-card-title">🤬 Error!</p>
+                <p class="modal-card-title">
+                    <ion-icon name="skull-outline"></ion-icon> Error!
+                </p>
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
@@ -198,8 +200,11 @@
                     <p class="subtitle"> Daily short sale volume </p>
                     <!-- Form -->
                     <form class="field has-addons" id="search">
-                        <div class="control main-input">
+                        <div class="control main-input has-icons-right">
                             <input class="input" id="input_ticker" type="text" placeholder="Ticker">
+                            <span class="icon is-small is-right">
+                                <ion-icon name="search-outline"></ion-icon>
+                            </span>
                         </div>
                         <div class="control">
                             <button class="button is-link" id="submit_button" type="submit">Find</button>
@@ -277,16 +282,20 @@
                 Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
                     rel="nofollow" rel="noreferrer">aqua_disco</a>.
             </p>
-            <p id="support">
-                Support TightShorts 🤑
-            </p>
             <p>
+                Support TightShorts <ion-icon name="cash-outline"></ion-icon>
+            </p>
+            <p class="support-block">
                 <a href="https://paypal.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer">
-                    <button class="button is-link is-outlined">PayPal</button>
+                    <button class="button is-link is-outlined">
+                        <ion-icon name="logo-paypal"></ion-icon> PayPal
+                    </button>
                 </a>
                 <a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow"
                     rel="noreferrer">
-                    <button class="button is-dark is-outlined">Tinkoff</button>
+                    <button class="button is-dark is-outlined">
+                        <ion-icon name="card-outline"></ion-icon> Tinkoff
+                    </button>
                 </a>
                 <br>
                 <br>
