Fix chart resize bug

--- a/web/main.html
+++ b/web/main.html
@@ -186,7 +186,7 @@
     </div>
     <!-- Error message: ends -->
 
-    <section class="section">
+    <section class="section" id="main-section">
         <div class="container is-max-widescreen">
             <div class="columns">
                 <div class="column is-half is-full-mobile">
