Fix support anchor

--- a/web/main.html
+++ b/web/main.html
@@ -280,7 +280,7 @@
                 Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
                     rel="nofollow" rel="noreferrer">aqua_disco</a>.
             </p>
-            <p>
+            <p id="support">
                 Support TightShorts <ion-icon name="cash-outline"></ion-icon>
             </p>
             <p class="support-block">
