--- a/web/main.html
+++ b/web/main.html
@@ -9,6 +9,7 @@
     <meta name="csrf-token" content="{{ csrf }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts | Daily Short Sale Volume</title>
+    <meta name="yandex-verification" content="1cab4cdc34b37061" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (d, w, c) {
