--- a/web/main.html
+++ b/web/main.html
@@ -91,11 +91,11 @@
 
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="https://t.me/samgozman" target="_blank" rel="nofollow"
-                            rel="noreferrer">
+                            rel="noreferrer" rel="noopener">
                             <ion-icon name="send-outline"></ion-icon> Telegram
                         </a>
                         <a class="navbar-item" href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/"
-                            target="_blank" rel="nofollow" rel="noreferrer">
+                            target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
                             <ion-icon name="pulse-outline"></ion-icon> Tinkoff Pulse
                         </a>
                         <a class="navbar-item" href="#support">
@@ -103,7 +103,7 @@
                         </a>
                         <hr class="navbar-divider">
                         <a class="navbar-item" href="https://github.com/samgozman/tightshorts/issues" target="_blank"
-                            rel="nofollow" rel="noreferrer">
+                            rel="nofollow" rel="noreferrer" rel="noopener">
                             <ion-icon name="bug-outline"></ion-icon> Report an issue
                         </a>
                     </div>
@@ -154,7 +154,7 @@
                                 trading
                                 volume on the NASDAQ, NYSE and OTC,
                                 which was reported to the <a href="http://regsho.finra.org/regsho-Index.html"
-                                    target="_blank" rel="nofollow" rel="noreferrer">FINRA</a> trade reporting facility.
+                                    target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">FINRA</a> trade reporting facility.
                                 We make no guarantees as to the
                                 accuracy of the data. The information is provided for reference only and does not
                                 represent individual
@@ -191,7 +191,7 @@
                 <div class="column is-half is-full-mobile">
                     <h1 class="title is-3"> Tight Shorts <sup class="is-size-7">
                             <a href="https://github.com/samgozman/tightshorts/releases" target="_blank" rel="nofollow"
-                                rel="noreferrer">
+                                rel="noreferrer" rel="noopener">
                                 {{ version }}
                             </a>
                         </sup>
@@ -267,7 +267,7 @@
             <p><strong>Disclaimer:</strong> The data on the chart is limited to the combined trading volume on the
                 NASDAQ, NYSE and OTC,
                 which was reported to the <a href="http://regsho.finra.org/regsho-Index.html" target="_blank"
-                    rel="nofollow" rel="noreferrer">FINRA</a> trade reporting facility. We make no guarantees as to the
+                    rel="nofollow" rel="noreferrer" rel="noopener">FINRA</a> trade reporting facility. We make no guarantees as to the
                 accuracy of the data. The information is provided for reference only and does not represent individual
                 investment advice. </p>
         </div>
@@ -277,21 +277,21 @@
         <div class="content has-text-centered">
             <p>
                 <strong>TightShorts.ru</strong> by <a href="https://github.com/samgozman" target="_blank" rel="nofollow"
-                    rel="noreferrer">samgozman</a>. <br>
+                    rel="noreferrer" rel="noopener">samgozman</a>. <br>
                 Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
-                    rel="nofollow" rel="noreferrer">aqua_disco</a>.
+                    rel="nofollow" rel="noreferrer" rel="noopener">aqua_disco</a>.
             </p>
             <p id="support">
                 Support TightShorts <ion-icon name="cash-outline"></ion-icon>
             </p>
             <p class="support-block">
-                <a href="https://paypal.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer">
+                <a href="https://paypal.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
                     <button class="button is-link is-outlined">
                         <ion-icon name="logo-paypal"></ion-icon> PayPal
                     </button>
                 </a>
                 <a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow"
-                    rel="noreferrer">
+                    rel="noreferrer" rel="noopener">
                     <button class="button is-dark is-outlined">
                         <ion-icon name="card-outline"></ion-icon> Tinkoff
                     </button>
@@ -308,7 +308,7 @@
     </footer>
 
     <!-- Octocat -->
-    <a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer">
+    <a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
         <svg class="octocat" viewBox="0 0 250 250">
             <path transform="rotate(90 125 125)" d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
             <path transform="rotate(90 125 125)" class="octocat-arm"
