Fix: <i> to <em>

--- a/web/main.html
+++ b/web/main.html
@@ -145,10 +145,10 @@
                                     trading hours</li>
                                 <li> <strong>Short Volume Ratio (SV,%)</strong> - percentage of short positions from the
                                     total
-                                    volume. <i>Formula: SV / Vol * 100</i></li>
+                                    volume. <em>Formula: SV / Vol * 100</em></li>
                                 <li> <strong>Short Exempt Volume Ratio (SEV,%)</strong> - percentage of short short sale
                                     exempt
-                                    trades from the total volume. <i>Formula: SEV / Vol * 100</i></li>
+                                    trades from the total volume. <em>Formula: SEV / Vol * 100</em></li>
                             </ol>
                             <p><strong>Disclaimer:</strong> The data on the TightShorts is limited to the combined
                                 trading
