Fix: iframe deprecated tags

--- a/web/main.html
+++ b/web/main.html
@@ -234,7 +234,7 @@
             <div class="columns is-multiline">
                 <div class="column mixline is-half is-full-mobile">
                     <div class="tradingview_chart">
-                        <iframe scrolling="no" frameborder="0" id="iframe_chart"
+                        <iframe id="iframe_chart"
                             title="TradingView price chart"></iframe>
                     </div>
                 </div>
