--- a/web/main.html
+++ b/web/main.html
@@ -276,6 +276,9 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
+                FINRA short sale volume parser
+            </p>
+            <p>
                 <strong>TightShorts.ru</strong> by <a href="https://github.com/samgozman" target="_blank" rel="nofollow"
                     rel="noreferrer" rel="noopener">samgozman</a>. <br>
                 Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
