--- a/web/main.html
+++ b/web/main.html
@@ -338,7 +338,7 @@
     <script src="./js/navbar.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/changeGrid.js"></script>
-    <script src="./js/chart.mjs" type="module"></script>
+    <script src="./js/app.mjs" type="module"></script>
     <script src="./js/onload.js"></script>
 </body>
 
