--- a/web/main.html
+++ b/web/main.html
@@ -7,6 +7,7 @@
     <meta name="description" content="US stocks short volume, short volume ratio, short exempt volume.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="csrf-token" content="{{ csrf }}">
+    <meta name="ticker" content="{{ ticker }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts | Daily Short Sale Volume</title>
     <meta name="yandex-verification" content="1cab4cdc34b37061" />
