Fix input placeholder on main page, code simplifying

--- a/web/main.html
+++ b/web/main.html
@@ -340,7 +340,7 @@
     <script src="./js/modal.js"></script>
     <script src="./js/changeGrid.js"></script>
     <script src="./js/app.mjs" type="module"></script>
-    <script src="./js/onload.js"></script>
+    <script src="./js/onload.mjs" type="module"></script>
 </body>
 
 </html>
