Short-Fork link generation

--- a/web/main.html
+++ b/web/main.html
@@ -79,7 +79,7 @@
                 <a class="navbar-item is-active" href="/">
                     Home
                 </a>
-                <a class="navbar-item" href="https://short-fork.herokuapp.com/">
+                <a class="navbar-item" href="https://short-fork.herokuapp.com/" id="menu_shortfork">
                     <ion-icon name="open-outline"></ion-icon>Short Fork
                 </a>
                 <a class="navbar-item modal-button is-hidden-desktop" data-target="help-modal">
