--- a/web/main.html
+++ b/web/main.html
@@ -77,7 +77,10 @@
         <div id="navbar" class="navbar-menu">
             <div class="navbar-start">
                 <a class="navbar-item is-active" href="/">
-                    <ion-icon name="home-outline" class="is-hidden-desktop"></ion-icon> Home
+                    <ion-icon name="home-outline"></ion-icon> Home
+                </a>
+                <a class="navbar-item" href="/screener">
+                    <ion-icon name="options-outline"></ion-icon> Screener
                 </a>
                 <a class="navbar-item" href="https://short-fork.herokuapp.com/" id="menu_shortfork">
                     <ion-icon name="open-outline"></ion-icon>Short Fork
@@ -91,7 +94,7 @@
                 </a>
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
-                        <ion-icon name="link-outline" class="is-hidden-desktop"></ion-icon> Contacts
+                        <ion-icon name="link-outline"></ion-icon> Contacts
                     </a>
 
                     <div class="navbar-dropdown">
@@ -197,6 +200,7 @@
     </div>
     <!-- Error message: ends -->
 
+    <!-- Main section -->
     <section class="section" id="main-section">
         <div class="container is-max-widescreen">
             <div class="columns">
@@ -284,7 +288,9 @@
                 investment advice. </p>
         </div>
     </section>
+    <!-- Main section: ends -->
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
@@ -321,6 +327,8 @@
             </p>
         </div>
     </footer>
+
+    <!-- Footer: ends -->
 
     <!-- Octocat -->
     <a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
